# tetris-packer

./: .gitignore  Cargo.toml  README.md  example.py  preprocess.py  render.py  solve.py
.cargo/: config
src/: ga.rs  img.rs  main.rs  piece.rs
