[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.8.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
